--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ target/
 /.settings/org.scala-ide.sdt.core.prefs
 *.db
 *.swp
-app/src/main/scala/datamodel/
+migrationInfo.txt
+example/src/main/scala/datamodel/
