A prototype using symbolic links.

--- a/example/migrations/src/main/resources/application.conf
+++ b/example/migrations/src/main/resources/application.conf
@@ -1,4 +1,6 @@
 migrations {
+           unhandled_location = "./migrations/src_migrations/main/scala"
+           handled_location = "./migrations/src/main/scala/migrations"
            db {
               url = "jdbc:h2:./test.tb"
               driver = "org.h2.Driver"
