--- a/example/migrations/src/main/resources/application.conf
+++ b/example/migrations/src/main/resources/application.conf
@@ -1,8 +1,5 @@
 migrations {
            unhandled_location = "./migrations/src_migrations/main/scala"
            handled_location = "./migrations/src/main/scala/migrations"
-           db {
-              url = "jdbc:h2:./test.tb"
-              driver = "org.h2.Driver"
-           }
+           include file("./app/src/main/resources/application.conf")
 }
