Upgrade Slick 2.0 to 3.0.

--- a/example/migrations/src/main/resources/application.conf
+++ b/example/migrations/src/main/resources/application.conf
@@ -1,5 +1,6 @@
 migrations {
            unhandled_location = "./migrations/src_migrations/main/scala"
            handled_location = "./migrations/src/main/scala/migrations"
+           driver = "slick.driver.H2Driver$"
            include file("./app/src/main/resources/application.conf")
 }
