Upgrade example app to use Slick 3.0.

--- a/example/app/src/main/resources/application.conf
+++ b/example/app/src/main/resources/application.conf
@@ -1,5 +1,8 @@
-db {
-   url = "jdbc:h2:./test.tb"
-   driver = "org.h2.Driver"
-   version_control_dir = "./.db"
+slick {
+  driver = "slick.driver.H2Driver$"
+  db {
+    url = "jdbc:h2:./test.tb"
+    driver = "org.h2.Driver"
+    version_control_dir = "./.db"
+  }
 }
