A new command to create a migration file.

--- a/example/migrations/src/main/resources/application.conf
+++ b/example/migrations/src/main/resources/application.conf
@@ -1,5 +1,6 @@
 migrations {
            unhandled_location = "./migrations/src_migrations/main/scala"
            handled_location = "./migrations/src/main/scala/migrations"
+           migration_object = "MyMigrations"
            include file("./app/src/main/resources/application.conf")
 }
