--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,13 @@ machine:
     version: oraclejdk8
   python:
     version: 2.7.9
+dependencies:
+  pre:
+    - wget -q https://dl.bintray.com/sbt/debian/sbt-0.13.9.deb
+    - sudo dpkg -i sbt-0.13.9.deb
+  cache_directories:
+    - "~/.ivy2"
+    - "~/.sbt"
 test:
   pre:
     - sbt publishLocal
