--- a/example/app/src/main/resources/application.conf
+++ b/example/app/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 slick {
-  driver = "slick.driver.H2Driver$"
+  driver = "slick.jdbc.H2Profile$"
   version_control_dir = "./.db"
   db {
     url = "jdbc:h2:./test.tb"
