Configure CircleCI to test in both Scala 2.11 and Scala 2.12.

--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,10 @@ dependencies:
   cache_directories:
     - "~/.ivy2"
     - "~/.sbt"
+  override:
+    - sbt +test:compile
 test:
   pre:
     - sbt publishLocal
+  override:
+    - sbt +test:test
