--- a/circle.yml
+++ b/circle.yml
@@ -7,8 +7,8 @@ machine:
     version: 2.7.9
 dependencies:
   pre:
-    - wget -q https://dl.bintray.com/sbt/debian/sbt-0.13.13.deb
-    - sudo dpkg -i sbt-0.13.13.deb
+    - wget -q https://dl.bintray.com/sbt/debian/sbt-0.13.16.deb
+    - sudo dpkg -i sbt-0.13.16.deb
   cache_directories:
     - "~/.ivy2"
     - "~/.sbt"
@@ -18,4 +18,4 @@ test:
   pre:
     - sbt publishLocal
   override:
-    - sbt +test:test
+    - sbt test:test
