--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,12 +15,12 @@ jobs:
           command: |
                     apt update && apt install -y curl
                     curl -L -o sbt-$SBT_VERSION.deb https://dl.bintray.com/sbt/debian/sbt-$SBT_VERSION.deb
-                    dpkg -i sbt-$SBT_VERSION.deb
+                    sudo dpkg -i sbt-$SBT_VERSION.deb
                     rm sbt-$SBT_VERSION.deb
-                    apt-get update
-                    apt-get install -y sbt python-pip git
+                    sudo apt-get update
+                    sudo apt-get install -y sbt python-pip git
                     pip install awscli
-                    apt-get clean && apt-get autoclean
+                    sudo apt-get clean && sudo apt-get autoclean
       - checkout
       - restore_cache:
           # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
