--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,13 @@ jobs:
     docker:
       - image: circleci/openjdk:8
       - image: circleci/mysql:8.0.18
+        environment:
+          MYSQL_DATABASE: circle_test
+          MYSQL_USER: root
       - image: circleci/postgres:9.6.9
+        environment:
+          POSTGRES_USER: root
+          POSTGRES_DB: circle_test
     environment:
       SBT_VERSION: 1.3.7
     steps:
